Finishing the ClientDataSet Helper and starting the Messenger class

--- a/DelphiOopCRUDLib.dproj
+++ b/DelphiOopCRUDLib.dproj
@@ -109,11 +109,15 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="vcl.dcp"/>
+        <DCCReference Include="dbrtl.dcp"/>
+        <DCCReference Include="dsnap.dcp"/>
         <DCCReference Include="Helpers\UStringHelper.pas"/>
         <DCCReference Include="Helpers\URttiHelper.pas"/>
         <DCCReference Include="Helpers\UCustomEditHelper.pas"/>
         <DCCReference Include="Helpers\UComboboxHelper.pas"/>
         <DCCReference Include="Helpers\UClientDataSetHelper.pas"/>
+        <DCCReference Include="Utilities\UMessenger.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -470,12 +474,12 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <ProjectRoot Platform="iOSSimulator" Name="$(PROJECTNAME).app"/>
+                <ProjectRoot Platform="OSX32" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="Android" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="Win32" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
-                <ProjectRoot Platform="OSX32" Name="$(PROJECTNAME)"/>
+                <ProjectRoot Platform="iOSSimulator" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
             </Deployment>
             <Platforms>
